print data traffic between LLC and DRAM

--- a/tests/test.cfg
+++ b/tests/test.cfg
@@ -25,7 +25,7 @@ sys = {
     };
 
     l2 = {
-      type = "Simple";
+      type = "Timing";
       array = {
         type = "SetAssoc";
         ways = 8;
